# STOWP_SpaceTemp-wave-pred

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/data/: create_figures.py
src/: 00_create_figures.py  01_create_data.py  02_engine.py  config.py
