[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spacetemporal_ocean_wave_prediction"
version = "0.0.1"
description = "A neural network framework to predict ocean wave variables in 2D domains"
authors = [
  { name = "Felipe C. Minuzzi" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["spacetemporal_ocean_wave_prediction"]
force_sort_within_sections = true
